[package]
name = "base62-uuid"
version = "2.2.6"
edition = "2024"
description = "Minimalist crate to generate Base62 UUIDs"
license = "MIT"
repository = "https://github.com/qtfkwk/base62-uuid"

[dependencies]
base62 = "2.2.4"
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
clap-cargo = "0.18.3"
uuid = { version = "1.23.1", features = ["v4"] }
